--- a/styles.css
+++ b/styles.css
@@ -301,7 +301,7 @@ button:hover {
 
 .reading-body h1 { font-size: 2rem; }
 .reading-body h2 { font-size: 1.6rem; }
-.reading-body h3 { font-size: 1.3rem; }
+.reading-body h3 { font-size: 1rem; font-weight: normal; margin-bottom: 0; margin-top: 0;}
 
 /* PARAGRAPHS */
 .reading-body p {
@@ -392,4 +392,5 @@ button:hover {
     grid-template-columns: 100% !important;
   }
 }
+
 
